lpf 添加RecyclerView 自定义的分割线

--- a/app/src/main/res/layout/layout_item_user_info.xml
+++ b/app/src/main/res/layout/layout_item_user_info.xml
@@ -7,6 +7,8 @@
     <TextView
         android:id="@+id/tv_name"
         android:textColor="#333333"
+        android:layout_gravity="center"
+        android:text="ddd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
