--- a/app/src/main/res/layout/layout_item_user_info.xml
+++ b/app/src/main/res/layout/layout_item_user_info.xml
@@ -2,14 +2,66 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:background="#ffffff"
+    android:layout_height="55dp">
 
-    <TextView
-        android:id="@+id/tv_name"
-        android:textColor="#333333"
-        android:layout_gravity="center"
-        android:text="ddd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+        <TextView
+            android:id="@+id/tv_name"
+            android:textColor="#333333"
+            android:gravity="center_vertical"
+            android:layout_marginLeft="20dp"
+            android:text="name:lpf"
+            android:layout_width="0dp"
+            android:singleLine="true"
+            android:layout_weight="1"
+            android:layout_height="match_parent" />
+        <TextView
+            android:id="@+id/tv_tel"
+            android:textColor="#333333"
+            android:gravity="center_vertical"
+            android:layout_marginLeft="20dp"
+            android:text="tel:18810765302"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:singleLine="true"
+            android:layout_height="match_parent" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+        <TextView
+            android:id="@+id/tv_from"
+            android:textColor="#333333"
+            android:gravity="center_vertical"
+            android:layout_marginLeft="20dp"
+            android:text="from:上地四街"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:singleLine="true"
+            android:layout_height="match_parent" />
+        <TextView
+            android:id="@+id/tv_to"
+            android:textColor="#333333"
+            android:gravity="center_vertical"
+            android:layout_marginLeft="20dp"
+            android:text="to:北京西站"
+            android:singleLine="true"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent" />
+
+
+    </LinearLayout>
+
+
+
 
 </LinearLayout>
