--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimary">#4ac98f</color>
     <color name="colorPrimaryDark">#4ac98f</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="app_bg_color">#F8F8F8</color>
 </resources>
